--- a/gb/ncid277_7.md
+++ b/gb/ncid277_7.md
@@ -1,4 +1,24 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714821.md#1" target="_blank">外媒：与华为签约换贸易 中共施压法罗群岛</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714821.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/5G-150x120.jpg" align ="left"></a>丹麦《贝林时报》报导称，中共驻丹麦大使向法罗群岛施压，要求其与华为公司签署5G合同，否则双方一项重要贸易协定将被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 1:36 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712075.md#1" target="_blank">美中国专家出书 揭秘中共招募间谍手段（中）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712075.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/edited221-1-600x400-2-150x120.jpg" align ="left"></a>最近中共特工王立强投诚澳洲，引发外界对中共情报系统在海外广泛活动的关注。美国国会及行政当局中国委员会（CECC）办公室副主任彼得?马蒂斯（Peter Mattis, 中文名孟沛德）和马特?巴西（Matt Brazil）近日出书，揭露中共情报工作的历史、现状及手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714625.md#1" target="_blank">【思想领袖】中共内部承认正走向解体（四）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714625.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/EET-Interview-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）近日在“美国思想领袖”节目中，对美国的中国问题专家、宾夕法尼亚大学国际关系和中国历史教授林蔚（亚瑟?沃尔德伦，Arthur Waldron）进行了专访。全文翻译如下：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714227.md#1" target="_blank">被抹黑和造谣拿美国绿卡 黄之锋嘲讽五毛伪造</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909131000532384-150x120.jpg" align ="left"></a>香港众志秘书长黄之锋自2014年参与“占中”运动以来，一直成为中共的眼中钉。今年6月香港爆发“反送中”运动后，他被中共党媒新华社戴上“港独组织头目”的大帽，并常常遭到五毛攻击和抹黑。10日晚，黄之锋在facebook(fb)转发一张被伪造的美国绿卡，并嘲讽道：“五毛和小粉红们要注意喔！”
+
+10日晚，黄之锋在fb转发一位网友上传的贴有他本人照片的美国工卡.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:44 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713973.md#1" target="_blank">中共限古令再升级 各平台每月限播一部古装剧</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713973.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1810092140002662-150x120.jpg" align ="left"></a>近日，大陆多家影视上市公司高管及业内知名编剧团队人士证实，早前中共广电总局多次朝令夕改的“限古令”现在不仅没有解禁，而且再度升级。具体体现为，自12月起，各个播放平台每月只可播出一部古装剧。鉴于此，许多影视公司已经完全放弃古装剧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714478.md#1" target="_blank">美学界与智库报告：中共大撒币外交难买人心</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/Capture-8-150x120.jpg" align ="left"></a>美国学界与智库10日公布一份有关中共外交的最新研究报告显示，近几年来，北京外交预算倍增，达人民币600亿元；不过，北京“大撒币式”的外交，似乎没有赢得更多正面形象与友谊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank">中共空军0:4败于泰军 空军大校演讲泄真相</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714293.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6d4862f1955d324ee753fe211f5d1b64-150x120.jpg" align ="left"></a>号称全球军事实力第三的中共国家，其真实军事实力到底如何呢？中共空军大校在一次内部报告中揭露了真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 7:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714373.md#1" target="_blank">【热点互动】美反对世行对中贷款 释重大信号</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714373.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15df1ccfc6055bd6_ttl7dayKOH_842bd21c8be02656-150x120.jpg" align ="left"></a>川普总统发推批评世界银行通过今后五年对中国的低息贷款，并称中国（中共）很有钱；如果没有，“他们就造钱”。美财政部长也表示已经对该计划提出反对。外媒评论中美经济竞争正蔓延到多边机构。为何世行对中贷款引发争议？此事会引发什么样的国际效应？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:32 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714338.md#1" target="_blank">抹黑黄之锋持美国绿卡 漏洞百出沦笑柄</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/7bdd9c08246b807c40a06136283dfcf4-150x120.jpg" align ="left"></a>10日，香港众志秘书长黄之锋在脸书贴出一张疑似中共五毛伪造的黄之锋美国“绿卡”，不但名字写错，拼音也用普通话的拼法，沦为笑柄。他还调侃“五毛和小粉红们要注意喔”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 5:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713799.md#1" target="_blank">【新闻看点】从反送中到驱逐共党 港人猛醒</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713799.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1909200714411501-600x399-1-800x450-150x120.jpg" align ="left"></a>12月9日，香港人的街头抗争刚好满6个月。从6月初夏走到12月寒冬，香港人的抗争发生了质的变化，从“反送中”演变成了驱逐共党的“反极权”民主抗争。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 4:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714155.md#1" target="_blank">美推迟15日新关税？库德洛：仍可能加征</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714155.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/820b1d8b0e06c5ed67af13daddf85dd5-150x120.jpg" align ="left"></a>美媒12月10日称，美中双方官员表示，贸易谈判代表正在为推迟将于12月15日生效的美对华新一轮关税铺路。白宫首席经济顾问库德洛（Larry Kudlow）当天反驳说，美方仍未排除15日加税的可能性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711294.md#1" target="_blank">中港警察头目会面 官媒报导不同调的背后</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711294.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/191111100311100615-150x120.jpg" align ="left"></a>中共公安部部长赵克志日前会见了香港警队新任警务处长时，公安部旗下的官网予以详细报导，但中共两大央媒删除了赵克志的很多敏感讲话。有分析认为，央媒删除的那些话有泄漏中共高层秘密之嫌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 3:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714086.md#1" target="_blank">剑指中俄 美两党国防预算达共识 建太空部队</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11714086.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1170990853-150x120.jpg" align ="left"></a>周一（12月9日）晚间，美国参众两院的相关委员会通过了《 2020财政年度国防授权法》（DNAA 2020），批准了7380亿美元的国防预算，让美国准备应对来自中共和俄罗斯的威胁，此外美国太空部队将正式成为美国第六个军事部门。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 2:35 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank">美国安顾问：使用华为 即西方信息安全末日</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1177748633-150x120.jpg" align ="left"></a>美国川普（特朗普）的国家安全顾问奥布赖恩（Robert O’Brien）警告说，如果西方世界让华为参与建立5G网络，那就是民主世界的信息安全“世界末日”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 11:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank">【翻墙必看】中共残杀“变节”间谍及家人</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2004/08/408171957939-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:28 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank">中方加速买大豆 川普说贸易谈判进展好</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713494.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周一在白宫表示，美中的贸易谈判进展良好。中方当天也表明了达成协议的愿望，并与此同时加大了购买美国大豆的力度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 9:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713179.md#1" target="_blank">学者：慎防中共暗杀台总统候选人 制造混乱</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1183354844-150x120.jpg" align ="left"></a>随着台湾总统大选的逼近，外界日益关注中共对这场选举的干预。日本国际政治学者藤井严喜在12月8日便提出警告，台湾应当慎防中共暗杀总统候选人，迫使选举结果无效，并制造社会大混乱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 6:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712671.md#1" target="_blank">中国职篮法籍球员未看五星旗挨罚 网民吐槽</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712671.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-141607429-150x120.jpg" align ="left"></a>中国男子篮球职业联赛（CBA）一名法籍球员在比赛前的奏唱国歌仪式中，因为没有向五星旗行注目礼而被罚款人民币1万元。对此，网民纷纷留言加以吐槽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 3:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11712035.md#1" target="_blank">美中国专家出书 揭秘中共特工情报系统（上）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11712035.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7c268796d7d315f3579f9ab201870bfc-150x120.jpg" align ="left"></a>最近中共特工王立强投诚澳洲，引发外界对中共情报系统在海外广泛活动的关注。美国国会及行政当局中国委员会（CECC）办公室副主任彼得?马蒂斯（Peter Mattis，中文名孟沛德）和马特?巴西（Matt Brazil）近日出书，揭露中共情报工作的历史、现状及手段。
 
 12月5日，美国战略与国际研究中心（Center for Strategic and In.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:34 PM							</td></tr>
@@ -12,36 +32,6 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711477.md#1" target="_blank">中共再推愚民政策 图书馆清查“焚书”</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711477.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111161598893-150x120.jpg" align ="left"></a>最近，中共在全国开展清理中小学图书馆图书活动。一张工作人员在图书馆前焚烧书籍的照片在网上热传，其象征意义引发舆论挞伐，被称为“2019版的焚书”。专家分析认为，中共统治内外交困、四面楚歌，故进一步推行愚民政策。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 4:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711653.md#1" target="_blank">中共监管升级 相声脱口秀等将面临现场监督</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711653.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0ba7-hwsffzc7597511-150x120.jpg" align ="left"></a>中共对社会的监管从网络、视频、电视、出版物等方面继续扩展到说唱、相声等演出现场领域。脱口秀、相声等节目将面临内容审核和现场监管。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 4:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711557.md#1" target="_blank">河北公安高官奸淫多名幼女 警黑卖淫窝案曝光</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711557.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ef7b5d15ac8328f0564a5d40d880521f-150x120.jpg" align ="left"></a>河北省迁安市公安局党委副书记康永近期获刑，揭开了迁安性侵案的冰山一角，该案疑有数十名涉案人，其中包括中共官员、人大代表、富商等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 4:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711305.md#1" target="_blank">急与美国达协议？中宣部反美宣传紧急降温</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/4349032f373514a6842dd2e04396e930-150x120.jpg" align ="left"></a>中共官方今日（9日）表示希望中美双方平等互利推进谈判，尽快取得各方满意的结果。而官媒也紧急降温对美国近期通过“人权法案”的职责。外界分析，北京与美国达成贸易协议心切。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711123.md#1" target="_blank">【十字路口】台大选有中共干预 内有6大隐忧</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11711123.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15deb6f29385d327_ttl7dayCOt_15deb6d0fc832483_ttl7dayK9B_20191209-____-DJY-150x120.jpg" align ="left"></a>今天要来跟大家聊聊台湾的2020年总统大选，因为再过一个月，台湾的大选投票日就到了，三组总统候选人以及大批的立法委员候选人也都展开最后的全力冲刺。当然啦，中共也在冲刺，忙着介入台湾选举。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:12 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11710982.md#1" target="_blank">藏爱国者导弹文件 苹果前华裔员工窃案升级</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11710982.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51093211-150x120.jpg" align ="left"></a>今年一月，苹果公司的美籍华裔硬件工程师陈纪中（Jizhong Chen，音译）因涉嫌为一家中国初创企业盗窃苹果公司商业机密，受到美国检察官的起诉。后来，调查人员在其家中更发现了爱国者导弹机密文件，增加美国政府的警觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 10:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11709542.md#1" target="_blank">【翻墙必看】中共歼-10战机由来曝光</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11709542.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/06/cc53ea0783d030901c7a3199224b7f73-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.【内幕】为何歼-10酷似F-16猎鹰战机
-中共歼10（J-10）战机又被称为猛龙，是中共单引擎喷气式战斗机机队的主要战机，与西方和俄罗斯第四代战斗机相当。但J-10与无所不在的美国F-16猎鹰战斗机（F-16 Fighting Falcon）十分相似，且和以色列狮式战斗机有很大关系。
-
-2.中企债务规模大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:30 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11701362.md#1" target="_blank">走出华为的工程师：华为是全人类的噩梦(上)</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11701362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1153137465-150x120.jpg" align ="left"></a>华为员工李洪元事件，揭开了华为利用公权力构陷员工入狱的黑幕，引发外界关注。一名华为离职工程师向大纪元表示，华为就是中共的一个权力部门，它是结合商业、间谍、情报、偷窃的军工复合体。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 4:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11710103.md#1" target="_blank">中共下令3年内移除外国电脑 分析师：很困难</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11710103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-153788978-150x120.jpg" align ="left"></a>中共当局下令所有政府部门与公立机构在三年内移除外国电脑设备和软件，不过有分析师认为，很难以中国的软件替换外国的软件。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 2:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/18/n11662309.md#1" target="_blank">揭秘：中共如何利用华为在中亚建智能城市</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/18/n11662309.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/1812080415402378-150x120.jpg" align ="left"></a>随着中共通过经济投资在全球进行扩张，中共也输出了对民众打压、监控的独裁统治手段，其在中亚的投资同样助长了当地政府对民众的监控和管制，当地民众开始反抗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:00 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708923.md#1" target="_blank">歌手黄耀明12.8游行表心声：行出香港路</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708923.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/yaominhuang_meitu_1-150x120.jpg" align ="left"></a>港人在经过了6个月艰苦卓绝的抗争后，12月8日，民阵发起“国际人权日游行”，逾80万人再次走上街头，打着“追究警暴、捍卫人权”的横幅表达诉求。与岑子杰、李柱铭、毛梦静等民主派人士一起打头阵的歌手黄耀明，下午2时许提前从维园出发时在facebook（fb）呼吁︰“大家快快沿途加入，行出香港路！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709100.md#1" target="_blank">因撑港新专辑遭中共封杀 董事长乐团霸气回应</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1903281058132483-150x120.jpg" align ="left"></a>成军逾20年的台湾“董事长乐团”近期疑因力挺香港的“反送中”运动，上月底推出的第13张专辑《风中浮沉的花蕊》传遭大陆数位音乐平台下架。对此，贝斯手钧董（林大钧）在facebook（fb）霸气地写道：“帅喔，终于不用被听免费的了！”主唱吉董（吴永吉）更加霸气地回应：“（封杀）我们无所谓啦。愿荣光归香港！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:28 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709179.md#1" target="_blank">海归博士遭羁押3年 114次庭审后被撤诉</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709179.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/007ESdUkly1g9h55xiwdyj313v0m6e81-150x120.jpg" align ="left"></a>海归清华博士、国内LED照明第一人孙夕庆，回国创业，陷入经济纠纷被告上法庭，历经114次庭审，在羁押1277天后，无罪释放，然而他自己创立的公司已经被掏空。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709077.md#1" target="_blank">川普爱国者网站创始人赴港 支持抗议活动</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709077.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-08-at-22.02.18-150x120.png" align ="left"></a>12月8日，国际人权日之际，香港80万人走上街头，继续向港府施压，要求回应“五大诉求”。“川普爱国者”（Donald Trump Patriots）网站创始人马克斯·林恩（Max Linn）专程从美国赶往香港，为港人助威加油。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 5:38 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708917.md#1" target="_blank">俞强声出逃 传与其父被毛泽东活活吓死有关</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/11/1211290826301497-150x120.jpg" align ="left"></a>中共间谍王立强出逃后，轰动了整个澳洲及台湾政界。随后，中共国安部高官俞强声出逃事件，也再次被外界关注。美媒称，俞强声出逃，可能与他父亲被毛泽东“活活吓死”有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 3:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709015.md#1" target="_blank">中国出口未如预期 分析指中方想达协议</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11709015.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/31b38eb142199cfe97b7bf35bd1c4871-150x120.jpg" align ="left"></a>中共官方8日公布的数字显示，11月出口并没有如市场预期回归正值，而是同比下降1.1%。彭博社称，出口意外下降说明了为何中方想要达成第一阶段贸易协议。在全球需求已经疲弱之际，美国的关税加剧了对中国出口的冲击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 1:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708788.md#1" target="_blank">新版黄雀行动 秘密援助二百港人往台湾避难</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708788.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/191019104127100615-150x120.jpg" align ="left"></a>在台湾和香港，秘密援助香港抗议者的团体如雨后春笋一样发展起来，他们出钱出力，帮助抗议者逃离香港，目前已有200多名香港反送中抗议者到达台湾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708871.md#1" target="_blank">被曝是乐视网后台老板 李源潮曲线辟谣？</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1303142124402039-150x120.jpg" align ="left"></a>中共前国家副主席李源潮，被曝是乐视网的后台，曾被逼退到香港等消息后，李源潮疑通过亲共港媒辟谣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708850.md#1" target="_blank">圣诞节前 港人心里话：愿2020年实现普选</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11708850.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080600032478-600x399-1-150x120.jpg" align ="left"></a>香港示威游行已有6个月之久。12月8日，80万人再次走上街头，打着“追究警暴、捍卫人权、五大诉求、缺一不可”的横幅。在经历了半年的街头抗议后，港人有哪些心里话想说呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 11:38 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11707970.md#1" target="_blank">【翻墙必看】华为鲜为人知的内部运作秘密</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/8/n11707970.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/VCG31N1083191584-1-600x400-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
-
-1.【内幕】华为把“狼文化”带入加拿大
-正值华为计划把其美国研究中心迁往加拿大之际，华为加拿大分公司（多伦多）的前雇员接受《大纪元》的采访，揭示了华为不为人知的内部运作情况，包括党支部的运作，以及公司内部激烈的竞争环境。
-
-2.桂民海瑞典获奖 中共驻瑞大使威胁制裁遭批
-中共驻瑞典大使桂从友周三（4日）在哥德.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 9:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11710666.md#1" target="_blank">“焚书”重演？ 甘肃图书馆烧书并发照片</a><br></h3>日前，一则甘肃庆阳市镇原县图书馆在10月分对馆藏“非法出版物”、宗教出版物集中焚毁并配发照片的报道引起争议。
-知名作家章诒和质疑，焚书事关中国文化命脉，“谁批准的？谁签的字？”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 6:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/9/n11710095.md#1" target="_blank">广东省国资委前党委副书记张小刚落马</a><br></h3>12月9日，中共广东省国资委前党委副书记、省国资委巡视员张小刚，涉嫌严重“违纪违法”被调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 3:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712789.md#1" target="_blank">中共非法关押律师等 美驻华大使发声明抨击</a><br></h3>12月10日是“国际人权日”。中共虽然签署了《世界人权宣言》，但从来未遵守相关承诺，中国人权状况每况愈下。美国驻华大使布兰斯塔德发声明抨击中共。而中共在广州举办的“世界律师大会”，更是严禁大陆维权律师到场。中国失踪律师的家属表示，对中共开这个大会感到“震惊和可笑”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 5:15 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/ncid277_7.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277_7.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/ncid277_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_7.htm">http://www.epochtimes.com/gb/ncid277_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
