--- a/gb/news2007_7.md
+++ b/gb/news2007_7.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>文化艺术</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nhrnni253/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/3/n11697885.md#1" target="_blank">【看川普推特学英文】川普突访阿富汗 与美军共度感恩节</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/3/n11697885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1185339977-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="TOPSHOT - US President Donald Trump poses for selfies during a Thanksgiving dinner with US troops at Bagram Air Field during a surprise visit on November 28, 2019 in Afghanistan. (Photo by Olivier Douliery / AFP) (Photo by OLIVIER DOULIERY/AFP via Getty Images)" align ="left"></a>感恩节（Thanksgiving Day）在西方是年度最重要的节日之一。家人及亲朋好友会在这天团圆相聚，借着火鸡大餐之际叙叙旧，回顾这一年的努力，并且聊聊未来的心愿与展望。川普总统选择到美军在阿富汗的基地，与这些阵前将士们同乐，感恩他们远在他乡，却为国家无私的奉献及付出。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:40 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/26/n11682364.md#1" target="_blank">大劫时 总有人能幸免于难</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/26/n11682364.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1602241529342483-150x120.jpg" align ="left"></a>世上有很多这样的例子，每当大劫大难降临时，总有人能幸免于难，平安历劫。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:37 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/10/18/n8407193.md#1" target="_blank">文艺复兴四大经典绘画风格与技法</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/10/18/n8407193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/5-28-150x120.jpg" align ="left"></a>文艺复兴绘画中出现的Cangiante（换色法）、Chiaroscuro（明暗对照法）、Sfumato（晕涂法）和Unione（统合法）这四种风格迥异的绘画技法被后世广为流传，许多艺术巨匠都曾经出神入化地运用它们创造出辉煌而美丽的艺术珍品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:22 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11688763.md#1" target="_blank">天地清明引(125) 明光殒－明光无华3</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11688763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>料峭春寒，林织浓雾。转眼日已西斜，景阳盛怒之下，血气攻心，步履凌乱，江湖众人趁势围剿，团团将其围在垓心：“释放玄毒，荼毒武林；杀害我儿，景阳纳命来。”说罢众人齐上，讨命者，除贼者，不可胜计。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:00 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank">五律：水（二首）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11695415.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/IMG_07740-150x120.jpg" align ="left"></a>源头高莫测，何事住凡尘。 长与山川秀，更怀天地仁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank">青松絮语：沙发的高度</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11695264.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/10/1610131459021366-150x120.jpg" align ="left"></a>高度提升后，视野跟着开阔了。整个过程虽然波折，但终于实现了最初的目的。而买沙发的过程也给我们上了生动的一课：高度是我们在任何时候都应关注的问题……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/15/n11658468.md#1" target="_blank">金兰之交“变脸”帮助老友妻小</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/15/n11658468.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/ca95caf9a1a516e4be1f09d9fda57597-150x120.jpg" align ="left"></a>金兰之交的牺牲，长年遭到误解也在所不惜。……他让左右仆人抬出一个箱子来，箱子里堆积的全都是历年所买下的甲君家小缝制的各种绣品，亮闪闪的像新的一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11679911.md#1" target="_blank">奇梦预兆：改名轶事 转世奇闻</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11679911.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/05/e097cb7b10b131942da5879822f12999-150x120.jpg" align ="left"></a>行满对弥逊：“逊老是老僧的同门师兄。名字上下二字都与您相同。自从我听说您出任太守后，心中一直存疑。今日观察您的所言所行，音容笑貌，精神风采，几乎与逊老无异。您是逊老后身，这又有什么可怀疑的呢？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 5:00 PM			</td></tr>
@@ -11,14 +16,9 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11688649.md#1" target="_blank">天地清明引(123) 明光殒－明光无华1</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11688649.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1502131349102483-150x120.jpg" align ="left"></a>达湖游狂笑之间，忽见远远一人，自电闪雷鸣之间，急速而来。甫看清容貌，厉掌便至面前——“景……景阳”——掌风呼啸，震耳欲聋，山摇地动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/5/5/n1700065.md#1" target="_blank">漫谈中国舞：唐朝崇仙舞蹈《云韶乐》舞</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/7/5/5/n1700065.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/201910232-150x120.jpg" align ="left"></a>唐朝文宗时，下诏让太常卿冯定制作《云韶法曲》。《新唐书·礼乐志》亦记载，这个舞蹈由三百人表演，有宫廷宴席时才表演。唐《乐府杂录》记载，“乐分堂上、堂下。登歌四人，在堂下坐”，除了表演的三百人外，还有五个穿着绣花的衣服的舞童，各自手执著金莲花在前面导引，意即“执金莲花如仙家行道者”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/3/10/18/n396131.md#1" target="_blank">古代诗人的修炼故事：陈陶</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/3/10/18/n396131.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/10/457898773f18046294f77674e96f0afe-150x120.png" align ="left"></a>陈陶（约812年—约885年？）字嵩伯，晚唐著名诗人。其诗“无一点尘气。于晚唐诸人中，最得平淡”[1]，《陇西行》为其传世名篇：“誓扫匈奴不顾身，五千貂锦丧胡尘。可伶无定河边骨，犹是春闺梦里人。”[2]大中时，游学长安，后隐居南昌西山。有诗集十卷，已散佚，后人辑有《陈嵩伯诗集》一卷。《全唐诗》存录其诗二卷[3]。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:54 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/1/21/n2404596.md#1" target="_blank">救人一方  老天爷给父亲增寿二十年</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/9/1/21/n2404596.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1412091255022483-150x120.jpg" align ="left"></a>看相的说，父亲一生救人无数，积了大德，老天爷又给增寿二十年，能活到八十四岁高寿，福荫子孙后代等等……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 5:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/30/n11691292.md#1" target="_blank">纪实散文：一夜惊梦（12）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/30/n11691292.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/tu1-shutterstock_177027626-3-150x120.jpg" align ="left"></a>老周哥的故事
-一天，家中来了一男一女，一对精彩人物。男的面色黑瘦，个子高高，是回族阿訇之子。女的活泼爽利，笑语如珠，却是我汉家女子。幼承庭训，凡有客来，奉茶端水，即便退下，对先生之事向少开口。行走江湖，偶尔或露峥嵘，家门之内，一向谨守妇德。但这对异族夫妻吸引了我的注意力，端杯清茶，也坐沙发上聆听。原来男子姓周，俩人从.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 2:53 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/4/14/n2081403.md#1" target="_blank">飘洋过海趣谈剪发</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/4/14/n2081403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/12/1402180023592120-150x120.jpg" align ="left"></a>我在三十六岁左右，决定把头发的处理权收回来，也就是说举凡剪发、梳洗、整理都不假手他人，统统自己来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 9:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/15/n11657998.md#1" target="_blank">【命理篇】有钱有势就会幸福和快乐吗？</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/15/n11657998.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/acc207070a1285bd594565f13a547761-150x120.png" align ="left"></a>“河南杨花谢，河北李花荣。杨花飞去落何处，李花结果自然成。”隋炀帝听到宫女唱出这民谣谶语，突然心生“天启”的感触。富贵、富丽“迷楼”中的隋炀帝感触是否来得太晚？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:28 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11678243.md#1" target="_blank">天地清明引(122) 明光殒－棠棣花凋3</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/25/n11678243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/flower-2516146_1280-2-150x120.jpg" align ="left"></a>五大派掌门接信，言圣林七子走后，帮众玄毒复发。众人大惊，不知何故。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 8:00 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank">香港，你会好起来吗？</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11688080.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/520231ac92e9008b0d77409b6cbdb325-150x120.jpg" align ="left"></a>那年你带我上太平山顶，我的眼里是维多利亚港的醉人景观，你的眼里是对九七后的茫然与期盼。隔年你来台北，我带你上阳明山，双城都有美丽的山，亲吻我们的风，后来却很不一样。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 6:51 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/30/n11622452.md#1" target="_blank">【三国英雄】之三：性情中人（文字版）</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/10/30/n11622452.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/3-12-150x120.jpg" align ="left"></a>曹操一生也是大起大落，好几次被人背叛，多次死里逃生，曹操都没有哭过。但是面对生离死别，曹操却是痛苦流涕。历史上的曹操曾经哭敌人、哭朋友、哭将士，曹操可以说是个真性情的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:24 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11693393.md#1" target="_blank">五律：荒凉</a><br></h3> 繁华冬日碎， 未世道衰无。 水落沙洲出， 风干乱石枯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11695158.md#1" target="_blank">唐浩：将变</a><br></h3>赤匪妖术罄   良知破迷明   秋风红潮落   春旭两岸晴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:15 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11693392.md#1" target="_blank">诗歌：遥望</a><br></h3>冷寂寒冬里， 长河独远巡。 风吹枯叶尽， 水结薄冰新。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:05 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11693686.md#1" target="_blank">诗歌：无题</a><br></h3>萧萧西风过北疆 瑟瑟寒枝落尽芳 千载沧桑浑一梦 夜阑卧听雨打窗......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:05 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/2/n11695164.md#1" target="_blank">唐浩：史诗</a><br></h3>正气摇天笔   良知催泪滴   丹血舞神墨   青史留胜迹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11693115.md#1" target="_blank">五律：鼓</a><br></h3>洪声迈气扬，号令发轩黄。 万道雷霆势，千春日月光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:12 AM			</td></tr>
@@ -29,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11693114.md#1" target="_blank">台湾古典诗：奇迹</a><br></h3> 回流科技正萌芽，带动台湾就业加， 再创四龙奇迹造，振兴经济福邦家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11693111.md#1" target="_blank">调笑令．婆罗花开</a><br></h3> 珍惜， 珍惜， 真念金毫神笔。 戳穿红恶谎言， 真相真言善传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 8:08 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/1/n11692314.md#1" target="_blank">诗歌：决裂中共</a><br></h3> 世人觉醒 决裂中共向新生 香港全民反迫害......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月01日 10:54 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/11/29/n11690354.md#1" target="_blank">诗歌：回首</a><br></h3> 往昔风狂雨瓢泼 满江风浪夜如何 今朝高处回首看 一路诗韵一路歌......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月30日 12:43 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/news2007_7.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/news2007_7.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/news2007_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_7.htm">http://www.epochtimes.com/gb/news2007_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
