--- a/gb/nf3046_7.md
+++ b/gb/nf3046_7.md
@@ -5,6 +5,7 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/17/n11263703.md#1" target="_blank">三退三亿三千万 劝退义工心声：快退党保命</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/17/n11263703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/20190516-Edward-Dye-074-150x120.jpg" align ="left"></a>在5月16日的纽约市曼哈顿第42街上，法轮功庆祝第20届世界法轮大法日的游行队伍延绵数英里，一眼望不到头。在游行的第三个主题方阵走来时，一个蓝底金字的“全球退党服务中心”的巨大立幅告诉人们一个重大天象：已经有3亿3千万中国人宣布退出了共产党的党团队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月17日 10:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/15/n11261350.md#1" target="_blank">组图3：法轮功纽约大游行 退出中共保平安</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/15/n11261350.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1905161532401973-150x120.jpg" align ="left"></a>一场声势浩大、气势磅礴的游行在世界的中心——纽约曼哈顿中城展开。游行队伍从曼哈顿岛东端的二大道出发，途径大中央车站、布莱恩公园、时代广场等多个纽约地标景点，游行路线横贯曼哈顿岛，直至曼哈顿岛西端的十一大道。游行队伍绵延42街数个街区，沿途民众纷纷驻足观看，或拍照，或挥手致意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月17日 5:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/11/n11249499.md#1" target="_blank">第25届越南人权日 受害者揭露共产主义危害</a><br></h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/11/n11249499.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/190511003914100699-150x120.jpg" align ="left"></a>5月9日，第二十五届“越南人权日”（Vietnam Human Rights Day）论坛在美国国会举办，五位美国参、众议员到场支持越南人追求基本人权和自由的权利，多位曾遭遇共产迫害的越南、中国和老挝受难者以亲身经历揭露共产主义对民众的危害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月11日 1:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/6/4/n11298760.md#1" target="_blank">每日三退声明精选（2019/06/03）</a><br></h3>我是一名退伍军人，现在从事空调安装工作，很高兴在工作过程中听到三退保平安的事，在部队服役时正是徐才厚当权的时候，原来准备申请报考士官的，后来听说上面没人就别瞎使劲了，就放弃了，感觉这个国家完了，被中共邪党毁掉了，啥时候，大家都明白中共邪党是骗人的，这个国家才有希望，在此，我声明，退出中共邪党的共青团等邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月04日 10:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/6/3/n11296538.md#1" target="_blank">每日三退声明精选（2019/06/02）</a><br></h3>从小在中共谎言中长大的一代，现在认识到了中共的邪恶，你的所作所为，人神共愤，多行不义必自毙。你的专制阻碍着中国民主文明发展。声明退出共青团及少先队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月03日 11:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/6/2/n11295022.md#1" target="_blank">每日三退声明精选（2019/06/01）</a><br></h3>在我的人生中，文革的恐惧阴影还没有消失；又亲眼见证了中共1989年对全中国大学生的血腥镇压；89年大学生的心灵还没有得到抚平、亡灵还没有找到归宿时。1999年，中共及江泽民犯罪集团又发动了对修炼“真、善、忍”的法轮功学员的残酷迫害，一亿只想做好人，并且按照“真、善、忍”做好人的民众，在一夜间被中共造谣、污蔑、诽谤、打压、残酷迫害，一直延续到今天。孙小果就是共.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月02日 1:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/6/1/n11293555.md#1" target="_blank">每日三退声明精选（2019/05/31）</a><br></h3>我声明退出中共组织。我今年90岁了，小时候家里很苦。为了谋生十几岁就和同乡出来，一边学一边给人家治病。后来参加了中共的军队做了军医，由于医术精湛还做了彭真的保健医生。文革时彭真被批斗我也挨整，我问他们为什么整我，我是苦出身，从小参加革命。他们说我站错了队。共产党从来就是这么不讲理。我见过共产党做过的坏事多了。很多共产党的干部都是贪污腐败，玩弄女人。只是以前还.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年06月01日 11:09 AM							</td></tr>
@@ -39,6 +40,5 @@
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/10/n11246923.md#1" target="_blank">每日三退声明精选（2019/05/09）</a><br></h3>我当了村支书几十年，为中共卖命了几十年，没有意识到自己竟然是中共邪灵的一员。在此声明退出中共邪党组织，做炎黄子孙，不做马列子孙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月10日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/9/n11244082.md#1" target="_blank">每日三退声明精选（2019/05/08）</a><br></h3>共产邪党好话说尽，坏事做绝，处处以谎言愚弄国民，封闭空间给国民进行洗脑，不让百姓接触外界资讯，以维持其摇摇欲坠的邪党政权。我决定退出邪党所属的少先队组织，抹去兽的印记，选择美好的未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月09日 12:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/8/n11241363.md#1" target="_blank">每日三退声明精选（2019/05/07）</a><br></h3>我们是转业军人，邪党组织以扣工资为由胁迫转组织关系，并要求填写承诺书，为此说了违心话，在此宣布所有强制填写的所谓承诺全部作废，都是假话，并重申退出邪党组织。许多转业军人都没有转组织关系，不交党费，不参加组织活动，有的长达十几年，大家都知道邪党是骗人的，没人相信它们，所以都想脱离，但近年邪党组织以扣工资来威胁大家，使许多人不得不转组织关系，这完全是一个只准进不.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月08日 11:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/5/6/n11236553.md#1" target="_blank">每日三退声明精选（2019/05/05）</a><br></h3>共产党靠暴力和欺骗起家，至今流氓本性不改，我一直与之保持距离，上学时迫于老师压力，加入了少先队和团组织。工作后，领导一再要求入党，我一再拒绝。我在此郑重申明退团、退队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年05月06日 11:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_6.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;7&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_8.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nhrnni253/djy/blob/master/gb/nf3046_7.md#1<br><a href="https://github.com/nhrnni253/djy/blob/master/gb/nf3046_7.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nhrnni253/djy/blob/master/gb/nf3046_7.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_7.htm">http://www.epochtimes.com/gb/nf3046_7.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
